test/fails/bad_functions/return_type3.lgl
vec2 f() {
    return [1., 2., 3.];
}

void main() {
    return;
}